--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,8 @@
 @import 'base/variables';
 
 @import 'blocks/header';
+@import 'blocks/promo';
+@import 'blocks/buttons';
 
 * {
     font-family: 'Roboto', sans-serif;
