--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -1,39 +1,54 @@
 @font-face {
     font-family: 'Roboto';
     font-display: swap;
-    src: url('Roboto-Thin.woff') format('woff');
+    src: url('../../fonts/Roboto-Thin.eot');
+    src: url('../../fonts/Roboto-Thin.eot?#iefix') format('embedded-opentype'),
+    url('../../fonts/Roboto-Thin.woff') format('woff'),
+    url('../../fonts/../../fonts/Roboto-Thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
-    }
+}
 
 @font-face {
     font-family: 'Roboto';
     font-display: swap;
-    src: url('Roboto-Black.woff') format('woff');
-    font-weight: 900;
-    font-style: normal;
-    }
-
-@font-face {
-    font-family: 'Roboto';
-    font-display: swap;
-    src:url('Roboto-Light.woff') format('woff');
+    src: url('../../fonts/Roboto-Light.eot');
+    src: url('../../fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
+    url('../../fonts/Roboto-Light.woff') format('woff'),
+    url('../../fonts/Roboto-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
-    }
+}
 
 @font-face {
     font-family: 'Roboto';
     font-display: swap;
-    src:url('Roboto-Regular.woff') format('woff');
+    src: url('../../fonts/Roboto-Regular.eot');
+    src: url('../../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../../fonts/Roboto-Regular.woff') format('woff'),
+    url('../../fonts/Roboto-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
-    }
+}
 
 @font-face {
     font-family: 'Roboto';
     font-display: swap;
-    src:url('Roboto-Bold.woff') format('woff');
+    src: url('../../fonts/Roboto-Bold.eot');
+    src: url('../../fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../../fonts/Roboto-Bold.woff') format('woff'),
+    url('../../fonts/Roboto-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
-    }
+}
+
+@font-face {
+    font-family: 'Roboto';
+    font-display: swap;
+    src: url('../../fonts/Roboto-Black.eot');
+    src: url('../../fonts/Roboto-Black.eot?#iefix') format('embedded-opentype'),
+    url('../../fonts/Roboto-Black.woff') format('woff'),
+    url('../../fonts/Roboto-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
