--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import 'blocks/header';
 @import 'blocks/promo';
 @import 'blocks/buttons';
+@import 'blocks/advantages';
 
 * {
     font-family: 'Roboto', sans-serif;
