--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,7 +9,7 @@
 @import 'blocks/buttons';
 @import 'blocks/advantages';
 @import 'blocks/solutions';
-
+@import 'blocks/titles';
 * {
     font-family: 'Roboto', sans-serif;
 }
