--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -32,21 +32,21 @@
             text-decoration: none;
         }
     }
-    &-offer {
+    &__offer {
         margin-top: 56px;
         position: relative;
         min-height: 569px;
         display: flex;
         justify-content: space-between;
     }
-    &-offer__header {
+    &__header {
         margin-top: 106px;
         color: #ffffff;
         font-size: 42px;
         font-weight: 400;
         line-height: 48px;
     }
-    &-offer__subheader {
+    &__subheader {
         color: #ffffff;
         font-size: 24px;
         font-weight: 300;
@@ -56,65 +56,53 @@
             font-weight: 400;
         }
     }
-    &-offer__wrapper {
+    &__block {
         max-width: 530px;
     }
-    &-offer__img {
+    &__img {
         max-height: 100%;
         position: absolute;
         right: 0;
         bottom: 0;
     }
-    .slick-dots {
+    &__carousel {
+        position: relative;
+    }
+    &__navigation {
         position: absolute;
+        width: 100px;
         bottom: 68px;
         left: 50%;
         transform: translateX(-50%);
+    }
+    &__dots {
         display: flex;
-        margin-bottom: 0px;
-        padding-left: 0px;
-        list-style-type: none;
-        width: 70px;
-        justify-content: space-between;
-        li {
-            width: 11px;
-            height: 11px;
-            border-radius: 100%;
-            border: 1px solid #fff;
-            cursor: pointer;
-            &.slick-active {
-                background-color: #fff;
-                button {
-                    outline: none;
-                }
-            }
-            button {
-                font-size: 0px;
-                border: none;
-                background: none;
-            }
+    }
+    &__dot {
+        margin: 0 2px;
+        height: 11px;
+        width: 11px;
+        border: 1px solid #fff;
+        border-radius: 100%;
+        cursor: pointer;
+        &_active {
+            background-color: #fff;
         }
     }
-    .slick-active {
-        outline: none;
-        border: none;
-    }
-    .slick-prev, .slick-next {
-        border: none;
-        background: none;
-        outline: none;
-        position: absolute;
+    &__arrow {
         width: 6px;
         height: 11px;
+        cursor: pointer;
+        position: absolute;
     }
-    .slick-prev {
-        bottom: 76px;
-        left: 45%;
-        transform: translateX(-45%);
+    &__arrow-prev {
+        background: url('../../img/prev-arrow.png') center (center / cover) no-repeat;
+        left: -10px;
+        top: 1px;
     }
-    .slick-next {
-        bottom: 76px;
-        right: 44%;
-        transform: translateX(-43%);
+    &__arrow-next {
+        background: url('../../img/next-arrow.png') center (center / cover) no-repeat;
+        top: 1px;
+        right: 15px;
     }
 }
