--- a/src/sass/blocks/_solutions.scss
+++ b/src/sass/blocks/_solutions.scss
@@ -40,25 +40,35 @@
         }
     }
     &__carousel {
-        height: 560px;
-        width: 950px;
-        margin: 0 auto;
-        margin-top: 45px;
-        background: url('../../img/macbook-air.png') center (center / cover) no-repeat;
-        display: flex;
-        overflow: hidden;
         position: relative;
-        img {
-            position: absolute;
-            width: 75%;
-            top: 35px;
-            left: 115px;
-        }
+        height: 560px;
+        max-width: 940px;
+        margin: 0 auto;
+        margin-top: 35px;
+        border-image: url('../../img/macbook-air.png') 35 125 88 125 stretch stretch;
+        border-style: solid;
+        border-width: 30px 89px 61px 100px;
+            img {
+                width: 100%;
+            }
     }
-    &__content {
-        display: none;
-        &_active {
-            display: block;
-        }
+    &__arrow {
+        height: 60px;
+        width: 18px;
+        position: absolute;
+        cursor: pointer;
     }
+    &__arrow-prev {
+        background: url('../../img/second-slider/prev-arrow.png') center (center / cover) no-repeat;
+        top: 50%;
+        transform: translateY(-50%);
+        left: -159px;
+    }
+    &__arrow-next {
+        background: url('../../img/second-slider/next-arrow.png') center (center / cover) no-repeat;
+        top: 50%;
+        transform: translateY(-50%);
+        right: -159px;
+    }
+
 }
