added new section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,8 @@
 @import 'blocks/advantages';
 @import 'blocks/solutions';
 @import 'blocks/titles';
+@import 'blocks/branch';
+
 * {
     font-family: 'Roboto', sans-serif;
 }
