--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,6 +11,7 @@
 @import 'blocks/solutions';
 @import 'blocks/titles';
 @import 'blocks/branch';
+@import 'blocks/options';
 
 * {
     font-family: 'Roboto', sans-serif;
