--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -3,7 +3,7 @@
     font-size: 30px;
     font-weight: 900;
     text-align: center;
-    &_black {
-       color: #000;
+    &_grey {
+        color: #393939;
     }
 }
