--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@
 @import 'blocks/titles';
 @import 'blocks/branch';
 @import 'blocks/options';
+@import 'blocks/access';
 
 * {
     font-family: 'Roboto', sans-serif;
