--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,7 +13,7 @@
 @import 'blocks/branch';
 @import 'blocks/options';
 @import 'blocks/access';
-
+@import 'blocks/footer';
 * {
     font-family: 'Roboto', sans-serif;
 }
