--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -31,6 +31,8 @@
         margin-top: 20px;
     }
     &__link {
+        display: block;
+        margin-top: 10px;
         color: #ffffff;
         font-size: 14px;
         font-weight: 300;
