--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -34,6 +34,10 @@
         width: 264px;
         margin: 0 auto;
         text-align: center;
+        color: #393939;
+        font-size: 18px;
+        font-weight: 300;
+        text-align: center;
         span {
             font-weight: 700;
         }
