--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -37,8 +37,9 @@
         font-size: 14px;
         font-weight: 300;
         line-height: 19px;
+        transition: 0.3s all;
         &:hover {
-            color: #fff;
+            color: rgba(255,255,255,0.6);
             text-decoration: none;
         }
     }
