--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,9 @@
 @import 'blocks/options';
 @import 'blocks/access';
 @import 'blocks/footer';
+
+@import 'base/media';
+
 * {
     font-family: 'Roboto', sans-serif;
 }
