--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -32,6 +32,9 @@
             text-decoration: none;
         }
     }
+    &__burger {
+        display: none;
+    }
     &__offer {
         margin-top: 56px;
         position: relative;
@@ -67,6 +70,9 @@
     }
     &__carousel {
         position: relative;
+        &-inner {
+            transition: 0.5s all;
+        }
     }
     &__navigation {
         position: absolute;
