create first carousel with arrows and dots on js

--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -70,8 +70,11 @@
     }
     &__carousel {
         position: relative;
+        overflow: hidden;
+        width: 100%;
         &-inner {
             transition: 0.5s all;
+            display: flex;
         }
     }
     &__navigation {
