create modal and forms markup and styles, need write media query and javascript to send form-data

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,8 @@
 @import 'blocks/options';
 @import 'blocks/access';
 @import 'blocks/footer';
+@import 'blocks/modal';
+@import 'blocks/forms';
 
 @import 'base/media';
 
