--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -409,4 +409,31 @@
             }
         }
     }
+    .modal {
+        width: 100%;
+        &__close {
+            right: 10px;
+            top: -10px;
+            color: #000;
+        }
+        &__title {
+            font-size: 15px;
+        }
+        &__subtitle {
+            font-size: 12px;
+        }
+        .feed-form {
+            width: 100%;
+            input {
+                font-size: 12px;
+                height: 35px;
+                padding: 0 10px;
+            }
+            .button_submit {
+                width: 90%;
+                margin: 0 auto;
+                font-size: 12px;
+            }
+        }
+    }
 }
