--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -4,11 +4,14 @@
     position: fixed;
     top: 0;
     background-color: rgba(0,0,0,0.56);
+    transition: 0.1s all;
     display: none;
+    opacity: 0;
 }
 
 .modal {
     display: block;
+    transition: 0.2s all;
     position: absolute;
     width: 380px;
     min-height: 400px;
@@ -36,7 +39,7 @@
         position: absolute;
         right: -40px;
         top: -20px;
-        color: #000;
+        color: #fff;
         font-size: 41px;
         cursor: pointer;
     }
