--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -27,8 +27,10 @@
         font-size: 13px;
         font-weight: 400;
         text-transform: uppercase;
+        transition: all .3s;
         &:hover {
             color: #fff;
+            opacity: 0.8;
             text-decoration: none;
         }
     }
