--- a/src/sass/blocks/_branch.scss
+++ b/src/sass/blocks/_branch.scss
@@ -11,22 +11,22 @@
         display: flex;
         align-items: center;
         &-1 {
-            background: url('../../img/item-1.png') center (center / cover) no-repeat;
+            background: url('../img/item-1.png') center (center / cover) no-repeat;
         }
         &-2 {
-            background: url('../../img/item-2.png') center (center / cover) no-repeat;
+            background: url('../img/item-2.png') center (center / cover) no-repeat;
         }
         &-3 {
-            background: url('../../img/item-3.png') center (center / cover) no-repeat;
+            background: url('../img/item-3.png') center (center / cover) no-repeat;
         }
         &-4 {
-            background: url('../../img/item-4.png') center (center / cover) no-repeat;
+            background: url('../img/item-4.png') center (center / cover) no-repeat;
         }
         &-5 {
-            background: url('../../img/item-5.png') center (center / cover) no-repeat;
+            background: url('../img/item-5.png') center (center / cover) no-repeat;
         }
         &-6 {
-            background: url('../../img/item-6.png') center (center / cover) no-repeat;
+            background: url('../img/item-6.png') center (center / cover) no-repeat;
         }
     }
     &__descr {
