--- a/src/sass/blocks/_options.scss
+++ b/src/sass/blocks/_options.scss
@@ -1,7 +1,7 @@
 .options {
     padding: 79px 0 181px 0;
     height: 580px;
-    background: url('../../img/third-bg.jpg') center (center / cover) no-repeat;
+    background: url('../img/third-bg.jpg') center (center / cover) no-repeat;
     &__wrapper {
         width: 100%;
         display: flex;
