--- a/src/sass/blocks/_solutions.scss
+++ b/src/sass/blocks/_solutions.scss
@@ -1,6 +1,6 @@
 .solutions {
     padding: 79px 0 61px 0;
-    background: url('../../img/second-bg.jpg') center (center / cover) no-repeat;
+    background: url('../img/second-bg.jpg') center (center / cover) no-repeat;
     .container {
         position: relative;
     }
@@ -69,12 +69,12 @@
         cursor: pointer;
     }
     &__arrow-prev {
-        background: url('../../img/second-slider/prev-arrow.png') center (center / cover) no-repeat;
+        background: url('../img/second-slider/prev-arrow.png') center (center / cover) no-repeat;
         top: 55%;
         left: 0;
     }
     &__arrow-next {
-        background: url('../../img/second-slider/next-arrow.png') center (center / cover) no-repeat;
+        background: url('../img/second-slider/next-arrow.png') center (center / cover) no-repeat;
         top: 55%;
         right: 0;
     }
